# openchat

./: .gitignore  .gitmodules  README.md  TODO.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/rules/: always.mdc  app-description.mdc  app-technologies.mdc  code-conventions.mdc  database-migrations.mdc  react.mdc  shadcn-components.mdc  src-architecture.mdc  src-tauri-architecture.mdc  style.mdc  system-overview.mdc  tauri-app-icons.mdc  typescript.mdc
src/: App.css  App.tsx  app.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_conversations.sql  002_create_messages.sql  003_index_messages_conv_id.sql  004_add_reasoning_to_messages.sql  005_add_name_to_conversations.sql  005_add_status_to_messages.sql  006_create_app_settings.sql  007_create_messages_fts.sql  008_create_conversations_fts.sql  009_create_mcp_servers.sql  010_add_model_to_app_settings.sql
src-tauri/src/: commands.rs  database.rs  db.rs  hf_downloader.rs  lib.rs  main.rs  mcp.rs  menu.rs  migrations.rs  mlc_server.md  mlc_server.rs  mlx_server.rs  model_download.rs  model_store.rs  models.rs  openai_service.rs
src-tauri/src/llm/: core.rs  mod.rs  prompt.rs  service.rs
src-tauri/src/mcp/: constants.rs  manager.rs  mod.rs  rpc.rs  serde_utils.rs  session.rs  store.rs  transport.rs  types.rs
src-tauri/src/mcp/transport/: config.rs  http.rs  mod.rs  parsing.rs  stdio.rs  validation.rs
src-tauri/src/mcp/transport/session/: http.rs  mod.rs  stdio.rs
src-tauri/tests/: mcp_applescript.rs
src/components/: AppSidebar.tsx  ChatMessage.tsx  ChatWindow.tsx  ConversationList.tsx  Titlebar.tsx  app-header.tsx  app-menu-events.tsx  app-shortcuts.tsx  app-sidebar.tsx  chat-empty-state.tsx  chat-error-banner.tsx  chat-input.tsx  chat-message.tsx  chat-messages-list.tsx  chat-window.tsx  code-block.tsx  download-progress-toast.tsx  download-progress-tooltip.tsx  mlc-server-status.tsx  mlx-server-status.tsx  model-manager-status.tsx  reasoning-display.tsx  server-restart-button.tsx  server-status-indicator.tsx  settings-sidebar.tsx  settings-window.tsx  window-drag-region.tsx
src/components/app-sidebar/: app-sidebar-conversation-item.tsx  app-sidebar-conversations.tsx  app-sidebar-footer.tsx  app-sidebar-header.tsx
src/components/chat/: chat-tools-dropdown.tsx
src/components/markdown/: README.md  components.tsx  email-artifact.tsx  index.ts  markdown-image.tsx  markdown.css  markdown.tsx  quick-reply.tsx  rehype-plugins.ts  types.ts  utils.ts
src/components/settings/: danger-zone.tsx  mcp-server-form.tsx  mcp-servers.tsx  mcp-test-result.tsx  mcp-tool-item.tsx  model-download.tsx  model-selection.tsx  system-prompt.tsx
src/components/ui/: alert-dialog.tsx  copy-button.tsx  dialog-ext.tsx  dropdown-menu.tsx  sidebar.tsx  sonner.tsx
src/contexts/: app-context.tsx  conversation-context.tsx  download-progress-context.tsx  mlc-server-context.tsx  mlx-server-context.tsx  model-manager-context.tsx  theme-context.tsx
src/hooks/: use-app-actions.ts  use-app-settings.ts  use-assistant-response.ts  use-chat-completion.ts  use-conversation-export.ts  use-conversations.ts  use-download-status.ts  use-download-toast.tsx  use-mcp-servers.ts  use-mcp.ts  use-messages.ts  use-mobile.ts  use-model-download.ts  use-model-settings.ts  use-model.ts  use-server-status.ts  use-shortcut.ts  use-transcription.ts  use-unique-id.ts
src/lib/: commands.ts  complete-conversation-name.ts  db.ts  dom-utils.ts  download-progress.ts  events.ts  generate-conversation-name.ts  generate-conversation-title.ts  kysely.ts  mcp-bridge.ts  mcp-mappers.ts  mcp-tools.ts  mlc-client.ts  mlc-server.ts  mlx-server-schemas.ts  mlx-server-usage.ts  mlx-server-validation.ts  mlx-server.ts  model-download.ts  model-manager.ts  model-store.ts  openai.ts  prompt.ts  server-status-utils.tsx  set-conversation-title.ts  utils.ts
src/lib/chat-streaming/: chat-completion.ts  chunk-to-text-stream.ts  collect-response-stream.ts  generate-chat-completion.ts  schema-stream.ts  sse-stream.ts  think.ts  visible-text-stream.ts
src/lib/db/: app-settings.ts  conversations.ts  mcp-servers.ts  messages.ts
src/lib/export/: download-utils.ts  index.ts  markdown-export.ts
src/lib/mlx-server/: client.ts  constants.ts  index.ts  model-readiness-poller.ts  service.ts  status-manager.ts  utils.ts
src/lib/mlx-server/schemas/: chat.ts  index.ts  models.ts
src/types/: db.ts  download.ts  index.ts  mcp-form.ts  mcp.ts  mlc-server.ts  mlx-server.ts
