[package]
name = "openchat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.19"
dotenvy = "0.15.7"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1.0"
once_cell = "1"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.11", features = ["json"] }

tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-sql = { version = "2.0.0-beta.8", features = ["sqlite"] }
tauri-plugin-log = { version = "2.0.0-beta.4", features = ["colored", "tracing"] }

