[package]
name = "OpenChat"
version = "0.1.0"
description = "Private AI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [ "macos-private-api", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.27"
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1.0"
once_cell = "1"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
libc = "0.2"
windows-sys = { version = "0.52", features = ["Win32_System_Threading"] }

tauri-plugin-shell = "2.3.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-log = { version = "2.6.0", features = ["colored", "tracing"] }

# Download Hugging Face repositories (models) before starting mlc_llm
hf_download = { git = "https://github.com/maccman/hf-download.git" }
# Cross-platform home directory discovery
home = "0.5"

